--- a/app/public/css/style.css
+++ b/app/public/css/style.css
@@ -16,7 +16,8 @@
 }
 
 body {
-    background-color: aliceblue;
+    background-color: white;
+    background-attachment: fixed;
     font-family: "Poppins", sans-serif;
     font-weight: 400;
     font-style: normal;
